--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,20 @@
     animation: meals-appear 1s ease-out forwards;
   }
   
+  .mealsLoading {
+    text-align: center;
+    color: #fff;
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+
+  .mealsError {
+    text-align: center;
+    color: #ff0000;
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+
   .meals ul {
     list-style: none;
     margin: 0;
